Fix skills being out of alignment in mobile view

--- a/index.css
+++ b/index.css
@@ -183,5 +183,6 @@ a {
   }
   .skillsContainer {
     flex-direction: column;
+    align-items: center;
   }
 }
